--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.27"
   }
 }
